--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
+/* @import "-font-awesome/css/font-awesome.css"; */
+
+.container{
+margin-top:4%;
+}
+
+
+far{
+    font-size: 50px;
+}
+.card-body{
+    background-color: coral;
+}
+.jumbotron{
+    padding-top: 10px;
+    padding-bottom: 5px;
+    margin-bottom: 0px;
+}
+
+.border{
+    padding: 10px;
+  }
+  .btn{
+    margin-right: 10px;
+  }
+  .fa {
+    margin-right: 10px;
+  }
