--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
             <div class="grid-view">
 
                 <table class="table table-striped">
-                  <!-- <table border ='1' cellpadding = "15"> -->
+                  
                     <thead>
                         <tr>
                             <th>S NO</th>
@@ -49,13 +49,7 @@
                                 <button class="btn btn-sm btn-danger" (click)="deleteIssue(issue)">
                                   <i class="fa fa-remove"></i>Delete</button>
                               </td>
-                            <!-- <td>{{drone.hub_id}}</td>
-                                
-
-                            <td>{{drone.drone_category}}</td>
-
-                            <td>{{drone.drone_manufacture_name}}</td> -->
-                           
+                                                    
                         </tr>
                     </tbody>
                 </table>
@@ -63,36 +57,6 @@
             </div>
         
     </div>
-
-<!-- 
-    <ng-template #droneAddPopUp let-modal>
-        <div class="modal-header">
-            <h4 class="modal-title" id="modal-basic-title">Add New Drone</h4>
-            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
-      </button>
-        </div>
-        <form [formGroup]="addingIssueForm" >
-            <div class="modal-body">
-                <div class="approve-content">
-                   
-                    <div class="col-md-12 form-group">
-                        <input type="text" formControlName="Project Name" id="projectName" placeholder="projectName" >
-                      
-                        <span class="error_msg_display" id="drone_uin_error" *ngIf="addingIssueForm.get('drone_uin').errors && (addingIssueForm.get('drone_uin').touched) ">
-              <span *ngIf="addingIssueForm.get('drone_uin').errors.required">
-                Drone UIN is Required
-              </span>
-                        </span>
-                    </div>
-                   
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-outline-success"[disabled]="addingIssueForm.invalid" (click)="onSubmitDetails()"  type="button">Save</button>
-            </div>
-        </form>
-    </ng-template> -->
 
 </div>
 
@@ -145,7 +109,7 @@
 
   <ng-template #displayIssue let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">New Issue</h4>
+        <h4 class="modal-title" id="modal-basic-title"> Issue Details</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
           <span aria-hidden="true">&times;</span>
         </button>
